<resources>
    <string name="app_name">SiCepat REAL</string>
    <string name="vpn_not_connected">Disconnected</string>
    <string name="vpn_connected">Connected</string>
    <string name="vpn_connecting">Connecting...</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="title_server">Server Address &amp; Port Settings</string>
    <string name="server_lab_remarks">Remarks</string>
    <string name="server_lab_address3">Server Address</string>
    <string name="server_lab_port3">Port</string>
    <string name="server_lab_stream_security">Stream Security</string>
    <string name="server_lab_sni">SNI</string>
    <string name="server_lab_stream_fingerprint">Stream uTLS Fingerprint</string>
    <string name="server_lab_stream_alpn">Stream ALPN</string>
    <string name="server_lab_allow_insecure">Allow Insecure TLS</string>
    <string name="server_lab_ech_config_list">ECH Config List</string>
    <string name="server_lab_ech_force_query">Force ECH Query</string>
    <string name="server_lab_pinned_ca256">Pinned SHA256 CA</string>
    <string name="server_lab_public_key">Reality Public Key</string>
    <string name="server_lab_wg_public_key">Public Key</string>
    <string name="server_lab_secret_key">Secret Key</string>
    <string name="server_lab_preshared_key">Preshared Key</string>
    <string name="server_lab_reserved">Reserved</string>
    <string name="server_lab_local_address">Local Address</string>
    <string name="server_lab_local_mtu">Local MTU</string>
    <string name="server_lab_short_id">Reality Short ID</string>
    <string name="server_lab_spider_x">Spider X</string>
    <string name="server_lab_mldsa65_verify">ML-DSA-65 Signature Verify</string>
    <string name="server_lab_stream_pinsha256">Stream SHA256 Pin</string>
    <string name="server_lab_more_function">More Functions / Transport Settings</string>
    <string name="server_lab_network">Network</string>
    <string name="server_lab_head_type">Header Type</string>
    <string name="server_lab_request_host">Request Host</string>
    <string name="server_lab_path">Path</string>
    <string name="server_lab_xhttp_extra">XHTTP Extra Options</string>
    <string name="server_lab_id3">Hysteria2 ID / Password</string>
    <string name="server_obfs_password">Obfs Password</string>
    <string name="server_lab_port_hop">Port Hop</string>
    <string name="server_lab_port_hop_interval">Port Hop Interval</string>
    <string name="server_lab_bandwidth_down">Bandwidth Down</string>
    <string name="server_lab_bandwidth_up">Bandwidth Up</string>
</resources>
