<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/padding_spacing_dp16"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:id="@+id/lay_stream_security"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_stream_security"
            android:textColor="#B0C1D4" />

        <Spinner
            android:id="@+id/sp_stream_security"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_spacing_dp8"
            android:layout_marginBottom="@dimen/padding_spacing_dp8"
            android:entries="@array/streamsecurityxs"
            android:nextFocusDown="@+id/et_sni" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_sni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_sni"
            android:textColor="#B0C1D4" />

        <EditText
            android:id="@+id/et_sni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:nextFocusDown="@+id/sp_stream_fingerprint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_stream_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_stream_fingerprint"
            android:textColor="#B0C1D4" />

        <Spinner
            android:id="@+id/sp_stream_fingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_spacing_dp8"
            android:layout_marginBottom="@dimen/padding_spacing_dp8"
            android:entries="@array/streamsecurity_utls"
            android:nextFocusDown="@+id/sp_stream_alpn" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_stream_alpn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_stream_alpn"
            android:textColor="#B0C1D4" />

        <Spinner
            android:id="@+id/sp_stream_alpn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_spacing_dp8"
            android:layout_marginBottom="@dimen/padding_spacing_dp8"
            android:entries="@array/streamsecurity_alpn"
            android:nextFocusDown="@+id/sp_allow_insecure" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_allow_insecure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_allow_insecure"
            android:textColor="#B0C1D4" />

        <Spinner
            android:id="@+id/sp_allow_insecure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_spacing_dp8"
            android:layout_marginBottom="@dimen/padding_spacing_dp8"
            android:entries="@array/allowinsecures"
            android:nextFocusDown="@+id/et_ech_config_list"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_ech_config_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_ech_config_list"
            android:textColor="#B0C1D4" />

        <EditText
            android:id="@+id/et_ech_config_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:nextFocusDown="@+id/sp_ech_force_query" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_ech_force_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_ech_force_query"
            android:textColor="#B0C1D4" />

        <Spinner
            android:id="@+id/sp_ech_force_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_spacing_dp8"
            android:layout_marginBottom="@dimen/padding_spacing_dp8"
            android:entries="@array/ech_force_query_value" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_pinned_ca256"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_pinned_ca256"
            android:textColor="#B0C1D4" />

        <EditText
            android:id="@+id/et_pinned_ca256"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:nextFocusDown="@+id/sp_ech_force_query" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_public_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_public_key"
            android:textColor="#B0C1D4" />

        <EditText
            android:id="@+id/et_public_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:nextFocusDown="@+id/et_short_id" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_short_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_short_id"
            android:textColor="#B0C1D4" />

        <EditText
            android:id="@+id/et_short_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:nextFocusDown="@+id/et_spider_x" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_spider_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_spider_x"
            android:textColor="#B0C1D4" />

        <EditText
            android:id="@+id/et_spider_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:nextFocusDown="@+id/et_mldsa65_verify" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_mldsa65_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_spacing_dp16"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_lab_mldsa65_verify"
            android:textColor="#B0C1D4" />

        <EditText
            android:id="@+id/et_mldsa65_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>
